--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "underscore.string": "^3.3.5"
   },
   "engines": {
-    "node": "8.9.2",
+    "node": ">=8.9.2",
     "npm": "5.10.0"
   },
   "devDependencies": {
